--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 # Replace this with your actual connection string from MongoDB Atlas
 MONGO_URI="mongodb+srv://tangetisuvarna:suvarnadb@cluster0.uvtoxet.mongodb.net/bakerydb?retryWrites=true&w=majority&appName=Cluster0"
+REACT_APP_API_URL = https://e-commerce-mini-web.onrender.com/
